# OntoTradePlatform

./: .env.example  .gitignore  .pre-commit-config.yaml  .taskmasterconfig  PROFILE_SETUP.md  README_PORTFOLIO_SETUP.md  SECURITY.md  market-research.md  prd.md  readme.md  test_subscription.py  test_websocket_client.py
.cursor/: mcp.json
.github/workflows/: ci-cd.yml
.taskmaster/: state.json
.taskmaster/docs/: prd.txt
backend/: .bandit  .env.example  .flake8  README_PORTFOLIO_SETUP.md  create_watchlist_tables.py  pyproject.toml  railway.json  requirements-dev.txt  requirements.txt  stocks_table_only.sql  supabase_tables.sql
backend/app/: main.py
backend/app/api/: __init__.py  deps.py  router.py
backend/app/api/endpoints/: __init__.py  auth.py  health.py  kis.py  overseas.py  portfolio_holdings.py  portfolios.py  stock_search.py  stocks.py  trading.py  users.py  watchlist.py  websocket.py
backend/app/core/: auth.py  config.py  database.py  error_recovery.py  logging_system.py  monitoring.py  supabase.py  websocket.py  websocket_simple.py
backend/app/models/: portfolio.py  simulation.py  watchlist.py
backend/app/routers/: portfolios.py  simulation.py
backend/app/schemas/: trading.py  user.py
backend/app/services/: data_normalizer.py  data_validator.py  database_migration.py  kis_client.py  portfolio_service.py  stock_data.py  stock_data_fetcher.py  stock_database_service.py  stock_search.py  stock_simulator.py  supabase_service.py  trading_service.py
backend/app/tests/: __init__.py  conftest.py  test_main.py
backend/database/: execute_sql_function.sql  portfolio_schema.sql  simulation_tables.sql
backend/deploy/: deployment-guide.md  production.env.example
backend/scripts/: setup_portfolio_schema.py  setup_portfolio_schema_simple.py
backend/tests/: test_kis_api.py  test_portfolios.py
database/: create_profiles_table.sql  portfolio_schema.sql
docs/: CI-CD.md  Monitoring.md  development-guidelines.md  kis_api_migration_guide.md  oauth-setup.md  wireframes-additional.md  wireframes-phase1.md  wireframes-phase2-3.md
frontend/: .env.example  .gitignore  .prettierignore  eslint.config.js  package-lock.json  package.json  tailwind.config.js  vercel.json  vite.config.ts  vitest.config.ts
frontend/.storybook/: main.ts  preview.ts
frontend/src/: App.css  App.test.tsx  App.tsx  index.css  main.tsx  test-auth.tsx
frontend/src/api/: kisApi.ts  portfolioApi.ts  tradingApi.ts
frontend/src/components/: MonitoringExample.tsx  SessionMonitor.tsx  StockSearchModal.tsx
frontend/src/contexts/: AuthContext.tsx  PortfolioContext.tsx
frontend/src/hooks/: usePortfolioApi.ts  useSecureRequest.ts  useWebSocket.ts
frontend/src/pages/: AnalyticsPage.tsx  (+14 more)
test/frontend/: main_dashboard.html  simulation_dashboard.html
(+64 files in other folders)
